fix: adjust button styles for responsiveness on smaller screens

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -86,14 +86,10 @@ button.rounded-full {
   @apply cursor-pointer;
 }
 
-.custom-step-btn[disabled] {
-  cursor: default !important;
-}
-
-    height: 6.25rem;
-    border-radius: 50%;
-    padding: 0;
-    font-size: 1.25rem;
+@media (max-width: 800px) {
+  .custom-pill-btn,
+  .custom-pill-btn-reset {
+    width: 6.25rem;
     display: inline-flex;
     align-items: center;
     justify-content: center;
